--- a/environment.yaml
+++ b/environment.yaml
@@ -171,7 +171,7 @@ dependencies:
       - plotly==5.24.1
       - psutil==5.9.8
       - pyparsing==3.1.4
-      - python-graphviz==0.20.3
+      # - python-graphviz==0.20.3
       - pytz==2024.2
       - s3transfer==0.10.2
       - scikit-learn==1.4.0
